<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sytniky.mrhouse.activity.PasswordActivity">

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_enter_password" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tvPassword"
        android:background="@color/colorPrimaryDark"
        android:ems="3"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tvRepeatPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/etPassword"
        android:layout_marginTop="20dp"
        android:text="@string/tv_repeat_password" />

    <EditText
        android:id="@+id/etRepeatPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/etPassword"
        android:layout_marginTop="37dp"
        android:background="@color/colorPrimaryDark"
        android:textSize="35sp"
        android:ems="3"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etRepeatPassword"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@+id/btnNext"
        android:text="@string/btn_back" />

    <Button
        android:id="@id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/etRepeatPassword"
        android:layout_marginEnd="80dp"
        android:text="@string/btn_next" />

</RelativeLayout>
